# Control-of-SCARA-Robot-in-Gazebo

./: README.md
src/part_three/: package.xml  setup.cfg  setup.py
src/part_three/part_three/: velocityController.py  velocityControllerTwo.py  velocityController_old.py  velocityConverter.py
src/part_two/: package.xml  setup.cfg  setup.py
src/part_two/part_two/: pd_controller.py
src/rrbot_description/gazebo/: rrbot.gazebo.xacro
src/rrbot_description/urdf/: rrbot_description.urdf.xacro
src/rrbot_gazebo/scripts/: subscriber.py
src/service_custom/: CMakeLists.txt  package.xml
src/service_custom/srv/: CartVelocities.srv  IKinematics.srv  JointAngles.srv  JointVelocities.srv
